Fixed weird spacing in experience section

--- a/css/style1.css
+++ b/css/style1.css
@@ -12,7 +12,7 @@
   width: 40rem;
   height: 100%;
   margin: auto;
-  padding-top: 30px;
+  padding-top: 10px;
   background-color: white;
 }
 
